updated breadcrumbs for "Main" pages Files modified - [topnav,MyMessages,MyFees,Main,MyProfile,UserOpenForms,UserClosedForms,MyProjects,VendorApplication,pom.xml]

--- a/src/main/webapp/pages/VendorApplication/VendorApplication.variables.json
+++ b/src/main/webapp/pages/VendorApplication/VendorApplication.variables.json
@@ -34,12 +34,12 @@
     "category" : "wm.Variable",
     "dataBinding" : [ ],
     "dataSet" : [ {
-      "label" : "Home",
-      "icon" : "glyphicon glyphicon-home",
+      "label" : "My Dashboard",
+      "icon" : "wi wi-apps",
       "link" : "#/Main"
     }, {
       "label" : "Contractor Application",
-      "icon" : "wi wi-ellipsis-v",
+      "icon" : "wi wi-work",
       "link" : "#/VendorApplication"
     } ],
     "type" : "string",
@@ -462,7 +462,7 @@
         "columnName" : "COI",
         "isPrimaryKey" : false,
         "notNull" : false,
-        "length" : 2147483647,
+        "length" : -1,
         "precision" : 0,
         "generator" : "assigned",
         "isRelated" : false,
@@ -507,20 +507,6 @@
         "defaultValue" : "",
         "scale" : 0
       }, {
-        "fieldName" : "fullAddress",
-        "type" : "string",
-        "fullyQualifiedType" : "string",
-        "columnName" : "FullAddress",
-        "isPrimaryKey" : false,
-        "notNull" : true,
-        "length" : 1022,
-        "precision" : 0,
-        "generator" : "assigned",
-        "isRelated" : false,
-        "systemInserted" : true,
-        "systemUpdated" : true,
-        "scale" : 0
-      }, {
         "fieldName" : "active",
         "type" : "boolean",
         "fullyQualifiedType" : "boolean",
@@ -532,6 +518,20 @@
         "generator" : "assigned",
         "isRelated" : false,
         "defaultValue" : "true",
+        "scale" : 0
+      }, {
+        "fieldName" : "fullAddress",
+        "type" : "string",
+        "fullyQualifiedType" : "string",
+        "columnName" : "FullAddress",
+        "isPrimaryKey" : false,
+        "notNull" : true,
+        "length" : 768,
+        "precision" : 0,
+        "generator" : "assigned",
+        "isRelated" : false,
+        "systemInserted" : true,
+        "systemUpdated" : true,
         "scale" : 0
       } ],
       "entityName" : "Vendor",
