updated breadcrumbs / iconsets for Municipality Administration pages Files modified - [ManageInspections,MunicipalitySettings,EditForm,WorkSchedule,MunicipalityCodeSets,EditInspection,ManageForms,MunicipalityUsers,ManualFeeTypes,MunicipalityCodeList]

--- a/src/main/webapp/pages/MunicipalitySettings/MunicipalitySettings.variables.json
+++ b/src/main/webapp/pages/MunicipalitySettings/MunicipalitySettings.variables.json
@@ -67,12 +67,12 @@
     "category" : "wm.Variable",
     "dataBinding" : [ ],
     "dataSet" : [ {
-      "label" : "Home",
-      "icon" : "glyphicon glyphicon-home",
+      "label" : "Municipality Administration",
+      "icon" : "wi wi-domain",
       "link" : "#/MunicipalityAdministration"
     }, {
       "label" : "Municipality Settings",
-      "icon" : "wi wi-ellipsis-v",
+      "icon" : "wi wi-settings",
       "link" : "#/MunicipalitySettings"
     } ],
     "type" : "string",
