updated iconsets and breadcrumbs for CXAdmin pages Files modified - [ManageProjects,ManageRoles,ManageUsers,ManageMunicipalities,leftnav,ManageSubscriptions,ManageCompanies,CXCodeSets,CXCodeList,CXGlobalSettings]

--- a/src/main/webapp/pages/CXGlobalSettings/CXGlobalSettings.variables.json
+++ b/src/main/webapp/pages/CXGlobalSettings/CXGlobalSettings.variables.json
@@ -67,12 +67,12 @@
     "category" : "wm.Variable",
     "dataBinding" : [ ],
     "dataSet" : [ {
-      "label" : "Home",
-      "icon" : "glyphicon glyphicon-home",
+      "label" : "CX Admin",
+      "icon" : "wi wi-public",
       "link" : "#/CXAdmin"
     }, {
       "label" : "Global Settings",
-      "icon" : "wi wi-ellipsis-v",
+      "icon" : "wi wi-settings",
       "link" : "#/CXGlobalSettings"
     } ],
     "type" : "string",
