updated breadcrumb for ViewProject page updated sort order of munis on New Project dialog for CompanyProjects Files modified - [ViewProject,CompanyProjects,pom.xml]

--- a/src/main/webapp/pages/ViewProject/ViewProject.variables.json
+++ b/src/main/webapp/pages/ViewProject/ViewProject.variables.json
@@ -188,16 +188,16 @@
     "category" : "wm.Variable",
     "dataBinding" : [ ],
     "dataSet" : [ {
-      "label" : "Home",
-      "icon" : "glyphicon glyphicon-home",
+      "label" : "My Dashboard",
+      "icon" : "wi wi-apps",
       "link" : "#/Main"
     }, {
       "label" : "My Projects",
-      "icon" : "wi wi-ellipsis-v",
+      "icon" : "wi wi-building",
       "link" : "#/MyProjects"
     }, {
       "label" : "View Project",
-      "icon" : "wi wi-ellipsis-v",
+      "icon" : "wi wi-building",
       "link" : "#/ViewProject"
     } ],
     "type" : "string",
