- Work on letter stuff from yesterday - Re-imported database to fix Wavemaker-generated code that was causing buid+run to fail. Files modified - [_viewForm,EditForm,cx2,LetterService,Letters.jar,pom.xml]

--- a/services/cx2/src/cx2-procedures.mappings.json
+++ b/services/cx2/src/cx2-procedures.mappings.json
@@ -18,5 +18,17 @@
       "required" : true,
       "parameterType" : "IN"
     } ]
+  },
+  "getLetterTemplatesForFormStatus" : {
+    "procedureString" : "EXEC cx2.getLetterTemplatesForFormStatus @formStatusId=?",
+    "parameters" : [ {
+      "name" : "formStatusId",
+      "type" : "integer",
+      "list" : false,
+      "variableType" : "PROMPT",
+      "testValue" : "221",
+      "required" : true,
+      "parameterType" : "IN"
+    } ]
   }
 }
