--- a/services/cx2/designtime/db-connection-settings.json
+++ b/services/cx2/designtime/db-connection-settings.json
@@ -18,16 +18,22 @@
     "table" : "CaseStatuses",
     "schema" : "cx2"
   }, {
+    "table" : "CaseTypes",
+    "schema" : "cx2"
+  }, {
     "table" : "Code",
     "schema" : "cx2"
   }, {
     "table" : "CodeSets",
     "schema" : "cx2"
   }, {
-    "table" : "CaseTypes",
+    "table" : "CodesToForm",
     "schema" : "cx2"
   }, {
-    "table" : "CodesToForm",
+    "table" : "CodesToInspection",
+    "schema" : "cx2"
+  }, {
+    "table" : "ContractorTypes",
     "schema" : "cx2"
   }, {
     "table" : "Document",
@@ -36,13 +42,7 @@
     "table" : "Fees",
     "schema" : "cx2"
   }, {
-    "table" : "CodesToInspection",
-    "schema" : "cx2"
-  }, {
     "table" : "FormCategories",
-    "schema" : "cx2"
-  }, {
-    "table" : "ContractorTypes",
     "schema" : "cx2"
   }, {
     "table" : "FormCategoryMapping",
@@ -51,7 +51,13 @@
     "table" : "FormDraft",
     "schema" : "cx2"
   }, {
+    "table" : "FormFieldTypes",
+    "schema" : "cx2"
+  }, {
     "table" : "FormHistory",
+    "schema" : "cx2"
+  }, {
+    "table" : "FormMessageTagging",
     "schema" : "cx2"
   }, {
     "table" : "FormMessages",
@@ -60,10 +66,7 @@
     "table" : "FormStatuses",
     "schema" : "cx2"
   }, {
-    "table" : "FormMessageTagging",
-    "schema" : "cx2"
-  }, {
-    "table" : "FormsToInspections",
+    "table" : "FormToInspectionCategoryMapping",
     "schema" : "cx2"
   }, {
     "table" : "FormTypeFields",
@@ -72,22 +75,19 @@
     "table" : "FormTypes",
     "schema" : "cx2"
   }, {
-    "table" : "FormToInspectionCategoryMapping",
+    "table" : "FormsToInspections",
     "schema" : "cx2"
   }, {
     "table" : "GIS2Forms",
+    "schema" : "cx2"
+  }, {
+    "table" : "GisTransaction",
     "schema" : "cx2"
   }, {
     "table" : "GISContacts",
     "schema" : "cx2"
   }, {
     "table" : "GISRecords",
-    "schema" : "cx2"
-  }, {
-    "table" : "InspectionDesign",
-    "schema" : "cx2"
-  }, {
-    "table" : "GisTransaction",
     "schema" : "cx2"
   }, {
     "table" : "GlobalSettings",
@@ -99,28 +99,40 @@
     "table" : "InspectionCategories",
     "schema" : "cx2"
   }, {
-    "table" : "FormFieldTypes",
-    "schema" : "cx2"
-  }, {
     "table" : "InspectionCategoryMapping",
     "schema" : "cx2"
   }, {
-    "table" : "InspectionOutcome",
+    "table" : "InspectionDesign",
     "schema" : "cx2"
   }, {
     "table" : "InspectionHistory",
     "schema" : "cx2"
   }, {
-    "table" : "InspectionOutcomeFee",
+    "table" : "InspectionOutcome",
     "schema" : "cx2"
   }, {
-    "table" : "LetterTemplates",
+    "table" : "InspectionOutcomeFee",
     "schema" : "cx2"
   }, {
     "table" : "InspectionSequence",
     "schema" : "cx2"
   }, {
+    "table" : "LetterElement",
+    "schema" : "cx2"
+  }, {
+    "table" : "LetterSection",
+    "schema" : "cx2"
+  }, {
     "table" : "LetterTemplateToFormStatus",
+    "schema" : "cx2"
+  }, {
+    "table" : "LetterTemplates",
+    "schema" : "cx2"
+  }, {
+    "table" : "ManualFeeTypes",
+    "schema" : "cx2"
+  }, {
+    "table" : "MasterCases",
     "schema" : "cx2"
   }, {
     "table" : "MasterForms",
@@ -129,22 +141,16 @@
     "table" : "MasterInspections",
     "schema" : "cx2"
   }, {
-    "table" : "MasterCases",
-    "schema" : "cx2"
-  }, {
-    "table" : "ManualFeeTypes",
-    "schema" : "cx2"
-  }, {
     "table" : "MasterProjects",
     "schema" : "cx2"
   }, {
     "table" : "Municipalities",
     "schema" : "cx2"
   }, {
-    "table" : "MunicipalityGroups",
+    "table" : "MunicipalityGroupMembers",
     "schema" : "cx2"
   }, {
-    "table" : "MunicipalityGroupMembers",
+    "table" : "MunicipalityGroups",
     "schema" : "cx2"
   }, {
     "table" : "MyCart",
@@ -156,9 +162,6 @@
     "table" : "ProjectForms",
     "schema" : "cx2"
   }, {
-    "table" : "Projects",
-    "schema" : "cx2"
-  }, {
     "table" : "ProjectGISRecords",
     "schema" : "cx2"
   }, {
@@ -168,13 +171,13 @@
     "table" : "ProjectTasks",
     "schema" : "cx2"
   }, {
+    "table" : "Projects",
+    "schema" : "cx2"
+  }, {
     "table" : "Roles",
     "schema" : "cx2"
   }, {
     "table" : "SharedWith",
-    "schema" : "cx2"
-  }, {
-    "table" : "Users",
     "schema" : "cx2"
   }, {
     "table" : "StandardViews",
@@ -186,31 +189,37 @@
     "table" : "Subdivisions",
     "schema" : "cx2"
   }, {
+    "table" : "TransactionToFees",
+    "schema" : "cx2"
+  }, {
     "table" : "UserPasswordResetTokens",
     "schema" : "cx2"
   }, {
     "table" : "UserSubscriptions",
     "schema" : "cx2"
   }, {
-    "table" : "Vendor",
-    "schema" : "cx2"
-  }, {
-    "table" : "VendorApprovals",
-    "schema" : "cx2"
-  }, {
-    "table" : "VendorLicenses",
-    "schema" : "cx2"
-  }, {
-    "table" : "TransactionToFees",
-    "schema" : "cx2"
-  }, {
     "table" : "UserViewPreferences",
+    "schema" : "cx2"
+  }, {
+    "table" : "Users",
+    "schema" : "cx2"
+  }, {
+    "table" : "Vendor",
     "schema" : "cx2"
   }, {
     "table" : "VendorAdmins",
     "schema" : "cx2"
   }, {
+    "table" : "VendorApprovals",
+    "schema" : "cx2"
+  }, {
     "table" : "VendorLicenseTypes",
+    "schema" : "cx2"
+  }, {
+    "table" : "VendorLicenses",
+    "schema" : "cx2"
+  }, {
+    "table" : "VendorUsers",
     "schema" : "cx2"
   }, {
     "table" : "Vendors2Form",
@@ -220,9 +229,6 @@
     "schema" : "cx2"
   }, {
     "table" : "Violations",
-    "schema" : "cx2"
-  }, {
-    "table" : "VendorUsers",
     "schema" : "cx2"
   } ],
   "schemaFilter" : [ "cx2" ],
