Municipality Financial Transactions leaving back amounts by transaction types Fix for My Messages by mysteriously disappeared code New files added - [MunicipalityTransactions] Files modified - [MyMessages,EditGISRecord,MyMunicipality,cx2,app.variables.json,pages-config.json]

--- a/src/main/webapp/app.variables.json
+++ b/src/main/webapp/app.variables.json
@@ -724,6 +724,17 @@
     "dataSet" : [ ],
     "pageTransitions" : "none"
   },
+  "goToPage_MunicipalityTransactions" : {
+    "_id" : "wm-goToPage_MunicipalityTransactions-wm.NavigationVariable-1493377776976",
+    "name" : "goToPage_MunicipalityTransactions",
+    "owner" : "App",
+    "category" : "wm.NavigationVariable",
+    "dataBinding" : [ ],
+    "operation" : "gotoPage",
+    "pageName" : "MunicipalityTransactions",
+    "dataSet" : [ ],
+    "pageTransitions" : "none"
+  },
   "goToPage_MunicipalityUsers" : {
     "_id" : "wm-goToPage_MunicipalityUsers-wm.NavigationVariable-1478761593507",
     "name" : "goToPage_MunicipalityUsers",
