--- a/src/main/webapp/pages/pages-config.json
+++ b/src/main/webapp/pages/pages-config.json
@@ -221,6 +221,10 @@
   "type" : "PAGE",
   "params" : [ ]
 }, {
+  "name" : "MunicipalityTransactions",
+  "type" : "PAGE",
+  "params" : [ ]
+}, {
   "name" : "MunicipalityUsers",
   "type" : "PAGE",
   "params" : [ ]
