--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,13 @@
             </resource>
             <resource>
                 <filtering>true</filtering>
+                <directory>services/GisRecordService/src</directory>
+                <excludes>
+                    <exclude>**/*.java</exclude>
+                </excludes>
+            </resource>
+            <resource>
+                <filtering>true</filtering>
                 <directory>services/InspectionMessagingMailService/src</directory>
                 <excludes>
                     <exclude>**/*.java</exclude>
@@ -218,6 +225,7 @@
                         </goals>
                         <configuration>
                             <sources>
+                            
                                 <source>services/AddMultipleFeeToCart/src</source>
                                 <source>services/CXPasswordResetService/src</source>
                                 <source>services/DocumentProxyService/src</source>
@@ -226,6 +234,7 @@
                                 <source>services/FormMessagingMailService/src</source>
                                 <source>services/FormService/src</source>
                                 <source>services/GisMessagingMailService/src</source>
+                                <source>services/GisRecordService/src</source>
                                 <source>services/InspectionMessagingMailService/src</source>
                                 <source>services/InspectionService/src</source>
                                 <source>services/LetterService/src</source>
