added "Submit Form" and "Submit Case" dialogs to EditGISRecord. Automatically selecting the municipality that is already selected by being on the page. Added partialParam to the newFormDialog partial page in order to hide "Select Municipailty" on these dialogs Files modified - [EditGISRecord,newFormDialog,pages-config.json]

--- a/src/main/webapp/pages/pages-config.json
+++ b/src/main/webapp/pages/pages-config.json
@@ -402,6 +402,9 @@
   }, {
     "name" : "isCase",
     "type" : "boolean"
+  }, {
+    "name" : "muniSelectedByPage",
+    "type" : "boolean"
   } ]
 }, {
   "name" : "rightnav",
