--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,13 @@
             </resource>
             <resource>
                 <filtering>true</filtering>
+                <directory>services/DocumentService/src</directory>
+                <excludes>
+                    <exclude>**/*.java</exclude>
+                </excludes>
+            </resource>
+            <resource>
+                <filtering>true</filtering>
                 <directory>services/DynamicFieldService/src</directory>
                 <excludes>
                     <exclude>**/*.java</exclude>
@@ -69,6 +76,13 @@
             </resource>
             <resource>
                 <filtering>true</filtering>
+                <directory>services/FormStatusUpdate/src</directory>
+                <excludes>
+                    <exclude>**/*.java</exclude>
+                </excludes>
+            </resource>
+            <resource>
+                <filtering>true</filtering>
                 <directory>services/GisMessagingMailService/src</directory>
                 <excludes>
                     <exclude>**/*.java</exclude>
@@ -90,6 +104,13 @@
             </resource>
             <resource>
                 <filtering>true</filtering>
+                <directory>services/InspectionOutcomeUpdate/src</directory>
+                <excludes>
+                    <exclude>**/*.java</exclude>
+                </excludes>
+            </resource>
+            <resource>
+                <filtering>true</filtering>
                 <directory>services/InspectionService/src</directory>
                 <excludes>
                     <exclude>**/*.java</exclude>
@@ -98,6 +119,13 @@
             <resource>
                 <filtering>true</filtering>
                 <directory>services/LetterService/src</directory>
+                <excludes>
+                    <exclude>**/*.java</exclude>
+                </excludes>
+            </resource>
+            <resource>
+                <filtering>true</filtering>
+                <directory>services/MapMultipleFeesWithTransaction/src</directory>
                 <excludes>
                     <exclude>**/*.java</exclude>
                 </excludes>
@@ -229,15 +257,19 @@
                                 <source>services/CXPasswordResetService/src</source>
                                 <source>services/CheckoutService/src</source>
                                 <source>services/DocumentProxyService/src</source>
+                                <source>services/DocumentService/src</source>
                                 <source>services/DynamicFieldService/src</source>
                                 <source>services/FileService/src</source>
                                 <source>services/FormMessagingMailService/src</source>
                                 <source>services/FormService/src</source>
+                                <source>services/FormStatusUpdate/src</source>
                                 <source>services/GisMessagingMailService/src</source>
                                 <source>services/GisRecordService/src</source>
                                 <source>services/InspectionMessagingMailService/src</source>
+                                <source>services/InspectionOutcomeUpdate/src</source>
                                 <source>services/InspectionService/src</source>
                                 <source>services/LetterService/src</source>
+                                <source>services/MapMultipleFeesWithTransaction/src</source>
                                 <source>services/ProjectMessagingMailService/src</source>
                                 <source>services/ProjectTaskAssignment/src</source>
                                 <source>services/ResetPasswordMailService/src</source>
