New Table Device Details Files modified - [MyMessages,cx2,pom.xml,web.xml,index.html]

--- a/services/cx2/designtime/db-connection-settings.json
+++ b/services/cx2/designtime/db-connection-settings.json
@@ -213,19 +213,22 @@
     "table" : "VendorAdmins",
     "schema" : "cx2"
   }, {
-    "table" : "VendorLicenseTypes",
-    "schema" : "cx2"
-  }, {
     "table" : "Vendors2Form",
     "schema" : "cx2"
   }, {
     "table" : "VendorsToProject",
     "schema" : "cx2"
   }, {
+    "table" : "VendorUsers",
+    "schema" : "cx2"
+  }, {
     "table" : "Violations",
     "schema" : "cx2"
   }, {
-    "table" : "VendorUsers",
+    "table" : "VendorLicenseTypes",
+    "schema" : "cx2"
+  }, {
+    "table" : "UserDeviceDetails",
     "schema" : "cx2"
   } ],
   "schemaFilter" : [ "cx2" ],
