New Page Employee Locations New files added - [EmployeeLocations] Files modified - [MunicipalityAdministration,cx2,app.variables.json,pages-config.json]

--- a/src/main/webapp/pages/pages-config.json
+++ b/src/main/webapp/pages/pages-config.json
@@ -99,6 +99,10 @@
   "type" : "PAGE",
   "params" : [ ]
 }, {
+  "name" : "EmployeeLocations",
+  "type" : "PAGE",
+  "params" : [ ]
+}, {
   "name" : "FindForm",
   "type" : "PAGE",
   "params" : [ ]
