--- a/src/main/webapp/app.variables.json
+++ b/src/main/webapp/app.variables.json
@@ -436,6 +436,17 @@
     "dataSet" : [ ],
     "pageTransitions" : "none"
   },
+  "goToPage_EmployeeLocations" : {
+    "_id" : "wm-goToPage_EmployeeLocations-wm.NavigationVariable-1493900688450",
+    "name" : "goToPage_EmployeeLocations",
+    "owner" : "App",
+    "category" : "wm.NavigationVariable",
+    "dataBinding" : [ ],
+    "operation" : "gotoPage",
+    "pageName" : "EmployeeLocations",
+    "dataSet" : [ ],
+    "pageTransitions" : "none"
+  },
   "goToPage_FindForm" : {
     "_id" : "wm-goToPage_FindForm-wm.NavigationVariable-1486128615190",
     "name" : "goToPage_FindForm",
