- Added support for saving letters for inspections New files added - [_editLetters] Files modified - [LetterService,Cx2DataAccess.java,pages-config.json]

--- a/src/main/webapp/pages/pages-config.json
+++ b/src/main/webapp/pages/pages-config.json
@@ -352,6 +352,10 @@
   "type" : "PAGE",
   "params" : [ ]
 }, {
+  "name" : "_editLetters",
+  "type" : "PARTIAL",
+  "params" : [ ]
+}, {
   "name" : "_viewForm",
   "type" : "PARTIAL",
   "params" : [ {
