New Page DeviceDataEntry available for CXAdmin to mange details of all app registered devices New files added - [DeviceDataEntry] Files modified - [leftnav,webapp,pom.xml,pages-config.json]

--- a/src/main/webapp/app.variables.json
+++ b/src/main/webapp/app.variables.json
@@ -368,6 +368,17 @@
     "dataSet" : [ ],
     "pageTransitions" : "none"
   },
+  "goToPage_DeviceDataEntry" : {
+    "_id" : "wm-goToPage_DeviceDataEntry-wm.NavigationVariable-1494403932359",
+    "name" : "goToPage_DeviceDataEntry",
+    "owner" : "App",
+    "category" : "wm.NavigationVariable",
+    "dataBinding" : [ ],
+    "operation" : "gotoPage",
+    "pageName" : "DeviceDataEntry",
+    "dataSet" : [ ],
+    "pageTransitions" : "none"
+  },
   "goToPage_EditForm" : {
     "_id" : "wm-goToPage_EditForm-wm.NavigationVariable-1480049657857",
     "name" : "goToPage_EditForm",
