Stubbed static pages and comments for Chase payments New files added - [PaymentResponse,PaymentCancelled,PaymentTemplate] Files modified - [MyCart,app.variables.json,pages-config.json]

--- a/src/main/webapp/app.variables.json
+++ b/src/main/webapp/app.variables.json
@@ -875,6 +875,39 @@
     "dataSet" : [ ],
     "pageTransitions" : "none"
   },
+  "goToPage_PaymentCancelled" : {
+    "_id" : "wm-goToPage_PaymentCancelled-wm.NavigationVariable-1494436363946",
+    "name" : "goToPage_PaymentCancelled",
+    "owner" : "App",
+    "category" : "wm.NavigationVariable",
+    "dataBinding" : [ ],
+    "operation" : "gotoPage",
+    "pageName" : "PaymentCancelled",
+    "dataSet" : [ ],
+    "pageTransitions" : "none"
+  },
+  "goToPage_PaymentResponse" : {
+    "_id" : "wm-goToPage_PaymentResponse-wm.NavigationVariable-1494436444382",
+    "name" : "goToPage_PaymentResponse",
+    "owner" : "App",
+    "category" : "wm.NavigationVariable",
+    "dataBinding" : [ ],
+    "operation" : "gotoPage",
+    "pageName" : "PaymentResponse",
+    "dataSet" : [ ],
+    "pageTransitions" : "none"
+  },
+  "goToPage_PaymentTemplate" : {
+    "_id" : "wm-goToPage_PaymentTemplate-wm.NavigationVariable-1494436474345",
+    "name" : "goToPage_PaymentTemplate",
+    "owner" : "App",
+    "category" : "wm.NavigationVariable",
+    "dataBinding" : [ ],
+    "operation" : "gotoPage",
+    "pageName" : "PaymentTemplate",
+    "dataSet" : [ ],
+    "pageTransitions" : "none"
+  },
   "goToPage_ProcessForms" : {
     "_id" : "wm-goToPage_ProcessForms-wm.NavigationVariable-1482317640483",
     "name" : "goToPage_ProcessForms",
