--- a/src/main/webapp/pages/pages-config.json
+++ b/src/main/webapp/pages/pages-config.json
@@ -285,6 +285,18 @@
   "type" : "PAGE",
   "params" : [ ]
 }, {
+  "name" : "PaymentCancelled",
+  "type" : "PAGE",
+  "params" : [ ]
+}, {
+  "name" : "PaymentResponse",
+  "type" : "PAGE",
+  "params" : [ ]
+}, {
+  "name" : "PaymentTemplate",
+  "type" : "PAGE",
+  "params" : [ ]
+}, {
   "name" : "ProcessForms",
   "type" : "PAGE",
   "params" : [ ]
