- A ton of changes to get the Letters code to approach a level to where Inspection letters can work. New files added - [EditLetter,MultiDatabaseHelper.java] Files modified - [LetterService,googlemaps,letters,pom.xml,pages-config.json]

--- a/src/main/webapp/pages/pages-config.json
+++ b/src/main/webapp/pages/pages-config.json
@@ -99,6 +99,10 @@
     "type" : "integer"
   } ]
 }, {
+  "name" : "EditLetter",
+  "type" : "PAGE",
+  "params" : [ ]
+}, {
   "name" : "EmployeeLocations",
   "type" : "PAGE",
   "params" : [ ]
