--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,13 @@
             </resource>
             <resource>
                 <filtering>true</filtering>
+                <directory>services/DocumentService/src</directory>
+                <excludes>
+                    <exclude>**/*.java</exclude>
+                </excludes>
+            </resource>
+            <resource>
+                <filtering>true</filtering>
                 <directory>services/DynamicFieldService/src</directory>
                 <excludes>
                     <exclude>**/*.java</exclude>
@@ -76,6 +83,13 @@
             </resource>
             <resource>
                 <filtering>true</filtering>
+                <directory>services/FormStatusUpdate/src</directory>
+                <excludes>
+                    <exclude>**/*.java</exclude>
+                </excludes>
+            </resource>
+            <resource>
+                <filtering>true</filtering>
                 <directory>services/GisMessagingMailService/src</directory>
                 <excludes>
                     <exclude>**/*.java</exclude>
@@ -97,6 +111,13 @@
             </resource>
             <resource>
                 <filtering>true</filtering>
+                <directory>services/InspectionOutcomeUpdate/src</directory>
+                <excludes>
+                    <exclude>**/*.java</exclude>
+                </excludes>
+            </resource>
+            <resource>
+                <filtering>true</filtering>
                 <directory>services/InspectionService/src</directory>
                 <excludes>
                     <exclude>**/*.java</exclude>
@@ -111,6 +132,13 @@
             </resource>
             <resource>
                 <filtering>true</filtering>
+                <directory>services/MapMultipleFeesWithTransaction/src</directory>
+                <excludes>
+                    <exclude>**/*.java</exclude>
+                </excludes>
+            </resource>
+            <resource>
+                <filtering>true</filtering>
                 <directory>services/ProjectMessagingMailService/src</directory>
                 <excludes>
                     <exclude>**/*.java</exclude>
@@ -119,6 +147,13 @@
             <resource>
                 <filtering>true</filtering>
                 <directory>services/ProjectTaskAssignment/src</directory>
+                <excludes>
+                    <exclude>**/*.java</exclude>
+                </excludes>
+            </resource>
+            <resource>
+                <filtering>true</filtering>
+                <directory>services/PushNotification/src</directory>
                 <excludes>
                     <exclude>**/*.java</exclude>
                 </excludes>
@@ -237,17 +272,22 @@
                                 <source>services/CheckoutService/src</source>
                                 <source>services/DBConnectionService/src</source>
                                 <source>services/DocumentProxyService/src</source>
+                                <source>services/DocumentService/src</source>
                                 <source>services/DynamicFieldService/src</source>
                                 <source>services/FileService/src</source>
                                 <source>services/FormMessagingMailService/src</source>
                                 <source>services/FormService/src</source>
+                                <source>services/FormStatusUpdate/src</source>
                                 <source>services/GisMessagingMailService/src</source>
                                 <source>services/GisRecordService/src</source>
                                 <source>services/InspectionMessagingMailService/src</source>
+                                <source>services/InspectionOutcomeUpdate/src</source>
                                 <source>services/InspectionService/src</source>
                                 <source>services/LetterService/src</source>
+                                <source>services/MapMultipleFeesWithTransaction/src</source>
                                 <source>services/ProjectMessagingMailService/src</source>
                                 <source>services/ProjectTaskAssignment/src</source>
+                                <source>services/PushNotification/src</source>
                                 <source>services/ResetPasswordMailService/src</source>
                                 <source>services/UpdateRecordStatus/src</source>
                                 <source>services/UserService/src</source>
@@ -479,6 +519,13 @@
             <systemPath>${basedir}/lib/fontbox-2.0.5.jar</systemPath>
         </dependency>
         <dependency>
+            <groupId>gcm.server</groupId>
+            <artifactId>gcm.server</artifactId>
+            <version>1.0</version>
+            <scope>system</scope>
+            <systemPath>${basedir}/lib/gcm.server.jar</systemPath>
+        </dependency>
+        <dependency>
             <groupId>httpclient-4.5.3</groupId>
             <artifactId>httpclient-4.5.3</artifactId>
             <version>1.0</version>
@@ -493,11 +540,25 @@
             <systemPath>${basedir}/lib/httpmime-4.5.3.jar</systemPath>
         </dependency>
         <dependency>
+            <groupId>javapns-jdk16-2.3</groupId>
+            <artifactId>javapns-jdk16-2.3</artifactId>
+            <version>1.0</version>
+            <scope>system</scope>
+            <systemPath>${basedir}/lib/javapns-jdk16-2.3.jar</systemPath>
+        </dependency>
+        <dependency>
             <groupId>javax.ws.rs-api-2.0-m02</groupId>
             <artifactId>javax.ws.rs-api-2.0-m02</artifactId>
             <version>1.0</version>
             <scope>system</scope>
             <systemPath>${basedir}/lib/javax.ws.rs-api-2.0-m02.jar</systemPath>
+        </dependency>
+        <dependency>
+            <groupId>json-simple-1.1.1</groupId>
+            <artifactId>json-simple-1.1.1</artifactId>
+            <version>1.0</version>
+            <scope>system</scope>
+            <systemPath>${basedir}/lib/json-simple-1.1.1.jar</systemPath>
         </dependency>
         <dependency>
             <groupId>jsoup-1.10.2</groupId>
