MunicipalityForms-- built page basics, added a stock livegrid that will need to be replaced. "Select Date Range" is only visible to CXAdmin for now since it doesn't work, same with empty panel that will eventually have charts.
MyMunicipality-- added MunicipalityForms tile with tile count not yet set.
ProcessForms-- updated breadcrumb icon to match dashboard
New files added - [MunicipalityForms]
Files modified - [MyMunicipality,ProcessForms,app.variables.json,pages-config.json]

--- a/src/main/webapp/app.variables.json
+++ b/src/main/webapp/app.variables.json
@@ -702,6 +702,17 @@
     "dataSet" : [ ],
     "pageTransitions" : "none"
   },
+  "goToPage_MunicipalityForms" : {
+    "_id" : "wm-goToPage_MunicipalityForms-wm.NavigationVariable-1494512275751",
+    "name" : "goToPage_MunicipalityForms",
+    "owner" : "App",
+    "category" : "wm.NavigationVariable",
+    "dataBinding" : [ ],
+    "operation" : "gotoPage",
+    "pageName" : "MunicipalityForms",
+    "dataSet" : [ ],
+    "pageTransitions" : "none"
+  },
   "goToPage_MunicipalityInspections" : {
     "_id" : "wm-goToPage_MunicipalityInspections-wm.NavigationVariable-1488260207805",
     "name" : "goToPage_MunicipalityInspections",
