--- a/src/main/webapp/pages/pages-config.json
+++ b/src/main/webapp/pages/pages-config.json
@@ -217,6 +217,10 @@
   "type" : "PAGE",
   "params" : [ ]
 }, {
+  "name" : "MunicipalityForms",
+  "type" : "PAGE",
+  "params" : [ ]
+}, {
   "name" : "MunicipalityInspections",
   "type" : "PAGE",
   "params" : [ ]
