--- a/services/cx2/designtime/db-connection-settings.json
+++ b/services/cx2/designtime/db-connection-settings.json
@@ -18,22 +18,16 @@
     "table" : "CaseStatuses",
     "schema" : "cx2"
   }, {
-    "table" : "CaseTypes",
-    "schema" : "cx2"
-  }, {
     "table" : "Code",
     "schema" : "cx2"
   }, {
     "table" : "CodeSets",
     "schema" : "cx2"
   }, {
+    "table" : "CaseTypes",
+    "schema" : "cx2"
+  }, {
     "table" : "CodesToForm",
-    "schema" : "cx2"
-  }, {
-    "table" : "CodesToInspection",
-    "schema" : "cx2"
-  }, {
-    "table" : "ContractorTypes",
     "schema" : "cx2"
   }, {
     "table" : "Document",
@@ -42,7 +36,13 @@
     "table" : "Fees",
     "schema" : "cx2"
   }, {
+    "table" : "CodesToInspection",
+    "schema" : "cx2"
+  }, {
     "table" : "FormCategories",
+    "schema" : "cx2"
+  }, {
+    "table" : "ContractorTypes",
     "schema" : "cx2"
   }, {
     "table" : "FormCategoryMapping",
@@ -51,13 +51,7 @@
     "table" : "FormDraft",
     "schema" : "cx2"
   }, {
-    "table" : "FormFieldTypes",
-    "schema" : "cx2"
-  }, {
     "table" : "FormHistory",
-    "schema" : "cx2"
-  }, {
-    "table" : "FormMessageTagging",
     "schema" : "cx2"
   }, {
     "table" : "FormMessages",
@@ -66,7 +60,10 @@
     "table" : "FormStatuses",
     "schema" : "cx2"
   }, {
-    "table" : "FormToInspectionCategoryMapping",
+    "table" : "FormMessageTagging",
+    "schema" : "cx2"
+  }, {
+    "table" : "FormsToInspections",
     "schema" : "cx2"
   }, {
     "table" : "FormTypeFields",
@@ -75,19 +72,22 @@
     "table" : "FormTypes",
     "schema" : "cx2"
   }, {
-    "table" : "FormsToInspections",
+    "table" : "FormToInspectionCategoryMapping",
     "schema" : "cx2"
   }, {
     "table" : "GIS2Forms",
-    "schema" : "cx2"
-  }, {
-    "table" : "GisTransaction",
     "schema" : "cx2"
   }, {
     "table" : "GISContacts",
     "schema" : "cx2"
   }, {
     "table" : "GISRecords",
+    "schema" : "cx2"
+  }, {
+    "table" : "InspectionDesign",
+    "schema" : "cx2"
+  }, {
+    "table" : "GisTransaction",
     "schema" : "cx2"
   }, {
     "table" : "GlobalSettings",
@@ -99,16 +99,19 @@
     "table" : "InspectionCategories",
     "schema" : "cx2"
   }, {
+    "table" : "FormFieldTypes",
+    "schema" : "cx2"
+  }, {
     "table" : "InspectionCategoryMapping",
     "schema" : "cx2"
   }, {
-    "table" : "InspectionDesign",
-    "schema" : "cx2"
-  }, {
-    "table" : "InspectionHistory",
+    "table" : "InspectionDraft",
     "schema" : "cx2"
   }, {
     "table" : "InspectionOutcome",
+    "schema" : "cx2"
+  }, {
+    "table" : "InspectionHistory",
     "schema" : "cx2"
   }, {
     "table" : "InspectionOutcomeFee",
@@ -123,16 +126,13 @@
     "table" : "LetterSection",
     "schema" : "cx2"
   }, {
-    "table" : "LetterTemplateToFormStatus",
-    "schema" : "cx2"
-  }, {
     "table" : "LetterTemplates",
     "schema" : "cx2"
   }, {
-    "table" : "ManualFeeTypes",
+    "table" : "LetterTemplateToFormStatus",
     "schema" : "cx2"
   }, {
-    "table" : "MasterCases",
+    "table" : "ManualFeeTypes",
     "schema" : "cx2"
   }, {
     "table" : "MasterForms",
@@ -141,16 +141,19 @@
     "table" : "MasterInspections",
     "schema" : "cx2"
   }, {
-    "table" : "MasterProjects",
-    "schema" : "cx2"
-  }, {
     "table" : "Municipalities",
     "schema" : "cx2"
   }, {
-    "table" : "MunicipalityGroupMembers",
+    "table" : "MasterCases",
+    "schema" : "cx2"
+  }, {
+    "table" : "MasterProjects",
     "schema" : "cx2"
   }, {
     "table" : "MunicipalityGroups",
+    "schema" : "cx2"
+  }, {
+    "table" : "MunicipalityGroupMembers",
     "schema" : "cx2"
   }, {
     "table" : "MyCart",
@@ -165,13 +168,13 @@
     "table" : "ProjectGISRecords",
     "schema" : "cx2"
   }, {
-    "table" : "ProjectSharedWith",
+    "table" : "Projects",
     "schema" : "cx2"
   }, {
     "table" : "ProjectTasks",
     "schema" : "cx2"
   }, {
-    "table" : "Projects",
+    "table" : "ProjectSharedWith",
     "schema" : "cx2"
   }, {
     "table" : "Roles",
@@ -186,19 +189,13 @@
     "table" : "States",
     "schema" : "cx2"
   }, {
-    "table" : "Subdivisions",
-    "schema" : "cx2"
-  }, {
     "table" : "UserDeviceDetails",
     "schema" : "cx2"
   }, {
+    "table" : "Subdivisions",
+    "schema" : "cx2"
+  }, {
     "table" : "UserPasswordResetTokens",
-    "schema" : "cx2"
-  }, {
-    "table" : "UserSubscriptions",
-    "schema" : "cx2"
-  }, {
-    "table" : "UserViewPreferences",
     "schema" : "cx2"
   }, {
     "table" : "Users",
@@ -207,19 +204,19 @@
     "table" : "Vendor",
     "schema" : "cx2"
   }, {
+    "table" : "UserSubscriptions",
+    "schema" : "cx2"
+  }, {
+    "table" : "UserViewPreferences",
+    "schema" : "cx2"
+  }, {
     "table" : "VendorAdmins",
     "schema" : "cx2"
   }, {
     "table" : "VendorApprovals",
     "schema" : "cx2"
   }, {
-    "table" : "VendorLicenseTypes",
-    "schema" : "cx2"
-  }, {
     "table" : "VendorLicenses",
-    "schema" : "cx2"
-  }, {
-    "table" : "VendorUsers",
     "schema" : "cx2"
   }, {
     "table" : "Vendors2Form",
@@ -229,6 +226,12 @@
     "schema" : "cx2"
   }, {
     "table" : "Violations",
+    "schema" : "cx2"
+  }, {
+    "table" : "VendorUsers",
+    "schema" : "cx2"
+  }, {
+    "table" : "VendorLicenseTypes",
     "schema" : "cx2"
   } ],
   "schemaFilter" : [ "cx2" ],
