--- a/pom.xml
+++ b/pom.xml
@@ -97,6 +97,13 @@
             </resource>
             <resource>
                 <filtering>true</filtering>
+                <directory>services/InspectionOutcomeUpdate/src</directory>
+                <excludes>
+                    <exclude>**/*.java</exclude>
+                </excludes>
+            </resource>
+            <resource>
+                <filtering>true</filtering>
                 <directory>services/InspectionService/src</directory>
                 <excludes>
                     <exclude>**/*.java</exclude>
@@ -251,6 +258,7 @@
                                 <source>services/GisMessagingMailService/src</source>
                                 <source>services/GisRecordService/src</source>
                                 <source>services/InspectionMessagingMailService/src</source>
+                                <source>services/InspectionOutcomeUpdate/src</source>
                                 <source>services/InspectionService/src</source>
                                 <source>services/LetterService/src</source>
                                 <source>services/ProjectMessagingMailService/src</source>
