View Company Profile New files added - [CompanyDetails] Files modified - [topnav,_viewForm,_viewProject,CompanyProfile,ManageMunicipalityVendors,pages-config.json]

--- a/src/main/webapp/pages/pages-config.json
+++ b/src/main/webapp/pages/pages-config.json
@@ -30,6 +30,13 @@
   "type" : "PARTIAL",
   "params" : [ ]
 }, {
+  "name" : "CompanyDetails",
+  "type" : "PARTIAL",
+  "params" : [ {
+    "name" : "companyID",
+    "type" : "integer"
+  } ]
+}, {
   "name" : "CompanyForms",
   "type" : "PAGE",
   "params" : [ {
