Municipality Inspections New files added - [AllMunicipalityInspections] Files modified - [_viewForm,app.variables.json,pages-config.json]

--- a/src/main/webapp/pages/pages-config.json
+++ b/src/main/webapp/pages/pages-config.json
@@ -1,4 +1,8 @@
 [ {
+  "name" : "AllMunicipalityInspections",
+  "type" : "PAGE",
+  "params" : [ ]
+}, {
   "name" : "CXAdmin",
   "type" : "PAGE",
   "params" : [ ]
