--- a/src/main/webapp/app.variables.json
+++ b/src/main/webapp/app.variables.json
@@ -174,6 +174,17 @@
     "isList" : false,
     "saveInPhonegap" : false
   },
+  "goToPage_AllMunicipalityInspections" : {
+    "_id" : "wm-goToPage_AllMunicipalityInspections-wm.NavigationVariable-1496832570928",
+    "name" : "goToPage_AllMunicipalityInspections",
+    "owner" : "App",
+    "category" : "wm.NavigationVariable",
+    "dataBinding" : [ ],
+    "operation" : "gotoPage",
+    "pageName" : "AllMunicipalityInspections",
+    "dataSet" : [ ],
+    "pageTransitions" : "none"
+  },
   "goToPage_ClosedCases" : {
     "_id" : "wm-goToPage_ClosedCases-wm.NavigationVariable-1491395556167",
     "name" : "goToPage_ClosedCases",
