Municipality Contractor Enhancements-Including Draft Saving Files modified - [NewForm,CompanyMunicipalities,PaymentService,pages-config.json]

--- a/src/main/webapp/pages/pages-config.json
+++ b/src/main/webapp/pages/pages-config.json
@@ -305,6 +305,9 @@
   }, {
     "name" : "draftId",
     "type" : "integer"
+  }, {
+    "name" : "companyId",
+    "type" : "integer"
   } ]
 }, {
   "name" : "OpenCases",
