--- a/pom.xml
+++ b/pom.xml
@@ -589,6 +589,13 @@
             <scope>system</scope>
             <systemPath>${basedir}/lib/sqljdbc4-4.0.jar</systemPath>
         </dependency>
+        <dependency>
+            <groupId>stripe-java-5.2.0</groupId>
+            <artifactId>stripe-java-5.2.0</artifactId>
+            <version>1.0</version>
+            <scope>system</scope>
+            <systemPath>${basedir}/lib/stripe-java-5.2.0.jar</systemPath>
+        </dependency>
     </dependencies>
     <dependencyManagement>
         <dependencies>
