-Completing Contractor Documents -Fixed issues with ViewCompany in ManageMunicipalityVendors New files added - [CompanyService] Files modified - [_viewForm,_viewInspection,ManageMunicipalityVendors,CompanyDetails,pom.xml,project-services.xml,pages-config.json]

--- a/src/main/webapp/pages/pages-config.json
+++ b/src/main/webapp/pages/pages-config.json
@@ -39,6 +39,9 @@
   "params" : [ {
     "name" : "companyID",
     "type" : "integer"
+  }, {
+    "name" : "municipalityId",
+    "type" : "integer"
   } ]
 }, {
   "name" : "CompanyForms",
