UserCreation- cleaned up various implementation and added help text VendorApplication- updated help text to match UserCreation Files modified - [VendorApplication,UserCreation]

--- a/src/main/webapp/pages/VendorApplication/VendorApplication.variables.json
+++ b/src/main/webapp/pages/VendorApplication/VendorApplication.variables.json
@@ -39,7 +39,7 @@
       "link" : "#/Main"
     }, {
       "label" : "Contractor Application",
-      "icon" : "wi wi-work",
+      "icon" : "wi wi-assignment",
       "link" : "#/VendorApplication"
     } ],
     "type" : "string",
