CX System Message on Login Files modified - [Login,CXGlobalSettings,securityService,cx2,project-security.xml]

--- a/src/main/webapp/pages/CXGlobalSettings/CXGlobalSettings.variables.json
+++ b/src/main/webapp/pages/CXGlobalSettings/CXGlobalSettings.variables.json
@@ -292,6 +292,18 @@
         "generator" : "assigned",
         "isRelated" : false,
         "scale" : 0
+      }, {
+        "fieldName" : "cxmessage",
+        "type" : "text",
+        "fullyQualifiedType" : "text",
+        "columnName" : "CXMessage",
+        "isPrimaryKey" : false,
+        "notNull" : false,
+        "length" : 5000,
+        "precision" : 0,
+        "generator" : "assigned",
+        "isRelated" : false,
+        "scale" : 0
       } ],
       "entityName" : "GlobalSettings",
       "fullyQualifiedName" : "com.civicxpress.cx2.GlobalSettings",
@@ -520,6 +532,18 @@
         "isPrimaryKey" : false,
         "notNull" : false,
         "length" : 2147483647,
+        "precision" : 0,
+        "generator" : "assigned",
+        "isRelated" : false,
+        "scale" : 0
+      }, {
+        "fieldName" : "cxmessage",
+        "type" : "text",
+        "fullyQualifiedType" : "text",
+        "columnName" : "CXMessage",
+        "isPrimaryKey" : false,
+        "notNull" : false,
+        "length" : 5000,
         "precision" : 0,
         "generator" : "assigned",
         "isRelated" : false,
