--- a/src/main/webapp/pages/pages-config.json
+++ b/src/main/webapp/pages/pages-config.json
@@ -143,6 +143,13 @@
     "type" : "string"
   } ]
 }, {
+  "name" : "GISDetails",
+  "type" : "PARTIAL",
+  "params" : [ {
+    "name" : "GISRecordId",
+    "type" : "integer"
+  } ]
+}, {
   "name" : "InspectionList",
   "type" : "PAGE",
   "params" : [ {
